@@ -2,6 +2,8 @@
   * "private" is a keyword in C++.  (Duncan Grisby)
   * setup.py should install "bsddb.h".  (Duncan Grisby)
   * "DB_remove" memory corruption & crash.  (Duncan Grisby)
+  * Under Python 3.0, you can't use string keys/values, but
+    bytes ones. Print the right error message.
 
 4.7.2:
   * Solved a race condition in Replication Manager testcode.
